--- a/static/master.css
+++ b/static/master.css
@@ -45,17 +45,17 @@ table {
 }
 
 :root {
-  --base-font-size: 16px;
-  --base-font-family: var(--sansserif-font-family);
-  --base-background-color: var(--white, white);
-  --base-color: var(--black, black);
+  --default-font-size: 16px;
+  --default-font-family: var(--sansserif-font-family);
+  --default-background-color: var(--white, white);
+  --default-color: var(--black, black);
   --default-border-width: 1px;
   --default-border-color: currentColor;
   --default-bold-fw: bold;
-  --font-size: var(--base-font-size);
-  --font-family: var(--base-font-family);
-  --background-color: var(--base-background-color);
-  --color: var(--base-color);
+  --font-size: var(--default-font-size);
+  --font-family: var(--default-font-family);
+  --background-color: var(--default-background-color);
+  --color: var(--default-color);
   --border-width: var(--default-border-width);
   --border-color: var(--default-border-color);
   --bold-fw: var(--default-bold-fw);
@@ -533,10 +533,6 @@ hr {
 
 .lh5 {
   line-height: var(--lh5);
-}
-
-.normal {
-  font-weight: normal;
 }
 
 .bold {
@@ -1387,19 +1383,19 @@ hr {
   height: auto;
 }
 
-.min100vw {
-  min-width: 100vh;
+.minvw {
+  min-width: 100vw;
 }
 
-.minvh, .min100vh {
+.minvh {
   min-height: 100vh;
 }
 
-.maxw, .maxw100 {
+.maxw {
   max-width: 100%;
 }
 
-.maxh, .maxh100 {
+.maxh {
   max-height: 100%;
 }
 
@@ -1427,83 +1423,43 @@ hr {
   flex-wrap: wrap;
 }
 
-.grid2, .grid3, .grid4, .grid5, .grid6, .grid7, .grid8 {
-  display: flex;
-  flex-wrap: wrap;
+.grid {
+  display: grid;
 }
 
-.grid2 > * {
-  width: calc(100% / 2);
+.grid2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.grid3 > * {
-  width: calc(100% / 3);
+.grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.grid4 > * {
-  width: calc(100% / 4);
+.grid4 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
-.grid5 > * {
-  width: calc(100% / 5);
+.grid5 {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
-.grid6 > * {
-  width: calc(100% / 6);
+.grid6 {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
 }
 
-.grid7 > * {
-  width: calc(100% / 7);
+.grid7 {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
 }
 
-.grid8 > * {
-  width: calc(100% / 8);
-}
-
-@supports (display: grid) {
-  .grid {
-    display: grid;
-  }
-
-  .grid2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .grid3 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .grid4 {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  .grid5 {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-  }
-
-  .grid6 {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-  }
-
-  .grid7 {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-  }
-
-  .grid8 {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-  }
-
-  .grid2 > *, .grid3 > *, .grid4 > *, .grid5 > *, .grid6 > *, .grid7 > *,
-  .grid8 > * {
-    width: auto;
-  }
+.grid8 {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
 }
 
 .items-start {
@@ -1698,84 +1654,43 @@ hr {
     flex-wrap: wrap;
   }
 
-  .sd\:grid2, .sd\:grid3, .sd\:grid4, .sd\:grid5, .sd\:grid6, .sd\:grid7,
+  .sd\:grid {
+    display: grid;
+  }
+
+  .sd\:grid2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .sd\:grid3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .sd\:grid4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .sd\:grid5 {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .sd\:grid6 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .sd\:grid7 {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+  }
+
   .sd\:grid8 {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .sd\:grid2 > * {
-    width: calc(100% / 2);
-  }
-
-  .sd\:grid3 > * {
-    width: calc(100% / 3);
-  }
-
-  .sd\:grid4 > * {
-    width: calc(100% / 4);
-  }
-
-  .sd\:grid5 > * {
-    width: calc(100% / 5);
-  }
-
-  .sd\:grid6 > * {
-    width: calc(100% / 6);
-  }
-
-  .sd\:grid7 > * {
-    width: calc(100% / 7);
-  }
-
-  .sd\:grid8 > * {
-    width: calc(100% / 8);
-  }
-
-  @supports (display: grid) {
-    .sd\:grid {
-      display: grid;
-    }
-
-    .sd\:grid2 {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    .sd\:grid3 {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .sd\:grid4 {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-    }
-
-    .sd\:grid5 {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-    }
-
-    .sd\:grid6 {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-    }
-
-    .sd\:grid7 {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-    }
-
-    .sd\:grid8 {
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-    }
-
-    .sd\:grid2 > *, .sd\:grid3 > *, .sd\:grid4 > *, .sd\:grid5 > *,
-    .sd\:grid6 > *, .sd\:grid7 > *, .sd\:grid8 > * {
-      width: auto;
-    }
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
   }
 
   .sd\:order0 {
@@ -1829,84 +1744,43 @@ hr {
     flex-wrap: wrap;
   }
 
-  .md\:grid2, .md\:grid3, .md\:grid4, .md\:grid5, .md\:grid6, .md\:grid7,
+  .md\:grid {
+    display: grid;
+  }
+
+  .md\:grid2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .md\:grid3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .md\:grid4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .md\:grid5 {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .md\:grid6 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .md\:grid7 {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+  }
+
   .md\:grid8 {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .md\:grid2 > * {
-    width: calc(100% / 2);
-  }
-
-  .md\:grid3 > * {
-    width: calc(100% / 3);
-  }
-
-  .md\:grid4 > * {
-    width: calc(100% / 4);
-  }
-
-  .md\:grid5 > * {
-    width: calc(100% / 5);
-  }
-
-  .md\:grid6 > * {
-    width: calc(100% / 6);
-  }
-
-  .md\:grid7 > * {
-    width: calc(100% / 7);
-  }
-
-  .md\:grid8 > * {
-    width: calc(100% / 8);
-  }
-
-  @supports (display: grid) {
-    .md\:grid {
-      display: grid;
-    }
-
-    .md\:grid2 {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    .md\:grid3 {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .md\:grid4 {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-    }
-
-    .md\:grid5 {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-    }
-
-    .md\:grid6 {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-    }
-
-    .md\:grid7 {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-    }
-
-    .md\:grid8 {
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-    }
-
-    .md\:grid2 > *, .md\:grid3 > *, .md\:grid4 > *, .md\:grid5 > *,
-    .md\:grid6 > *, .md\:grid7 > *, .md\:grid8 > * {
-      width: auto;
-    }
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
   }
 
   .md\:order0 {
@@ -1960,84 +1834,43 @@ hr {
     flex-wrap: wrap;
   }
 
-  .ld\:grid2, .ld\:grid3, .ld\:grid4, .ld\:grid5, .ld\:grid6, .ld\:grid7,
+  .ld\:grid {
+    display: grid;
+  }
+
+  .ld\:grid2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .ld\:grid3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .ld\:grid4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .ld\:grid5 {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .ld\:grid6 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .ld\:grid7 {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+  }
+
   .ld\:grid8 {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .ld\:grid2 > * {
-    width: calc(100% / 2);
-  }
-
-  .ld\:grid3 > * {
-    width: calc(100% / 3);
-  }
-
-  .ld\:grid4 > * {
-    width: calc(100% / 4);
-  }
-
-  .ld\:grid5 > * {
-    width: calc(100% / 5);
-  }
-
-  .ld\:grid6 > * {
-    width: calc(100% / 6);
-  }
-
-  .ld\:grid7 > * {
-    width: calc(100% / 7);
-  }
-
-  .ld\:grid8 > * {
-    width: calc(100% / 8);
-  }
-
-  @supports (display: grid) {
-    .ld\:grid {
-      display: grid;
-    }
-
-    .ld\:grid2 {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    .ld\:grid3 {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .ld\:grid4 {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-    }
-
-    .ld\:grid5 {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-    }
-
-    .ld\:grid6 {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-    }
-
-    .ld\:grid7 {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-    }
-
-    .ld\:grid8 {
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-    }
-
-    .ld\:grid2 > *, .ld\:grid3 > *, .ld\:grid4 > *, .ld\:grid5 > *,
-    .ld\:grid6 > *, .ld\:grid7 > *, .ld\:grid8 > * {
-      width: auto;
-    }
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
   }
 
   .ld\:order0 {
@@ -2091,84 +1924,43 @@ hr {
     flex-wrap: wrap;
   }
 
-  .xl\:grid2, .xl\:grid3, .xl\:grid4, .xl\:grid5, .xl\:grid6, .xl\:grid7,
+  .xl\:grid {
+    display: grid;
+  }
+
+  .xl\:grid2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .xl\:grid3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .xl\:grid4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .xl\:grid5 {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .xl\:grid6 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .xl\:grid7 {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+  }
+
   .xl\:grid8 {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .xl\:grid2 > * {
-    width: calc(100% / 2);
-  }
-
-  .xl\:grid3 > * {
-    width: calc(100% / 3);
-  }
-
-  .xl\:grid4 > * {
-    width: calc(100% / 4);
-  }
-
-  .xl\:grid5 > * {
-    width: calc(100% / 5);
-  }
-
-  .xl\:grid6 > * {
-    width: calc(100% / 6);
-  }
-
-  .xl\:grid7 > * {
-    width: calc(100% / 7);
-  }
-
-  .xl\:grid8 > * {
-    width: calc(100% / 8);
-  }
-
-  @supports (display: grid) {
-    .xl\:grid {
-      display: grid;
-    }
-
-    .xl\:grid2 {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    .xl\:grid3 {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .xl\:grid4 {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-    }
-
-    .xl\:grid5 {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-    }
-
-    .xl\:grid6 {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-    }
-
-    .xl\:grid7 {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-    }
-
-    .xl\:grid8 {
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-    }
-
-    .xl\:grid2 > *, .xl\:grid3 > *, .xl\:grid4 > *, .xl\:grid5 > *,
-    .xl\:grid6 > *, .xl\:grid7 > *, .xl\:grid8 > * {
-      width: auto;
-    }
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
   }
 
   .xl\:order0 {
@@ -4288,9 +4080,7 @@ hr {
   border-radius: 999px;
 }
 
-.color-currentColor, .color-currentColor\:hover:hover,
-.anchor:hover .color-currentColor\:hover, .color-current,
-.color-current\:hover:hover, .anchor:hover .color-current\:hover {
+.color-current, .color-current\:hover:hover, .anchor:hover .color-current\:hover {
   color: currentColor;
 }
 
@@ -4302,167 +4092,167 @@ hr {
   color: transparent;
 }
 
-.black, .color-black {
+.black {
   color: var(--black);
 }
 
-.black-95, .color-black-95 {
+.black-95 {
   color: var(--black-95);
 }
 
-.black-90, .color-black-90 {
+.black-90 {
   color: var(--black-90);
 }
 
-.black-80, .color-black-80 {
+.black-80 {
   color: var(--black-80);
 }
 
-.black-70, .color-black-70 {
+.black-70 {
   color: var(--black-70);
 }
 
-.black-60, .color-black-60 {
+.black-60 {
   color: var(--black-60);
 }
 
-.black-50, .color-black-50 {
+.black-50 {
   color: var(--black-50);
 }
 
-.black-40, .color-black-40 {
+.black-40 {
   color: var(--black-40);
 }
 
-.black-30, .color-black-30 {
+.black-30 {
   color: var(--black-30);
 }
 
-.black-20, .color-black-20 {
+.black-20 {
   color: var(--black-20);
 }
 
-.black-10, .color-black-10 {
+.black-10 {
   color: var(--black-10);
 }
 
-.black-05, .color-black-05 {
+.black-05 {
   color: var(--black-05);
 }
 
-.black-025, .color-black-025 {
+.black-025 {
   color: var(--black-025);
 }
 
-.black-0125, .color-black-0125 {
+.black-0125 {
   color: var(--black-0125);
 }
 
-.white, .color-white {
+.white {
   color: var(--white);
 }
 
-.white-95, .color-white-95 {
+.white-95 {
   color: var(--white-95);
 }
 
-.white-90, .color-white-90 {
+.white-90 {
   color: var(--white-90);
 }
 
-.white-80, .color-white-80 {
+.white-80 {
   color: var(--white-80);
 }
 
-.white-70, .color-white-70 {
+.white-70 {
   color: var(--white-70);
 }
 
-.white-60, .color-white-60 {
+.white-60 {
   color: var(--white-60);
 }
 
-.white-50, .color-white-50 {
+.white-50 {
   color: var(--white-50);
 }
 
-.white-40, .color-white-40 {
+.white-40 {
   color: var(--white-40);
 }
 
-.white-30, .color-white-30 {
+.white-30 {
   color: var(--white-30);
 }
 
-.white-20, .color-white-20 {
+.white-20 {
   color: var(--white-20);
 }
 
-.white-10, .color-white-10 {
+.white-10 {
   color: var(--white-10);
 }
 
-.white-05, .color-white-05 {
+.white-05 {
   color: var(--white-05);
 }
 
-.white-025, .color-white-025 {
+.white-025 {
   color: var(--white-025);
 }
 
-.white-0125, .color-white-0125 {
+.white-0125 {
   color: var(--white-0125);
 }
 
-.aqua, .color-aqua {
+.aqua {
   color: var(--aqua);
 }
 
-.blue, .color-blue {
+.blue {
   color: var(--blue);
 }
 
-.navy, .color-navy {
+.navy {
   color: var(--navy);
 }
 
-.teal, .color-teal {
+.teal {
   color: var(--teal);
 }
 
-.green, .color-green {
+.green {
   color: var(--green);
 }
 
-.olive, .color-olive {
+.olive {
   color: var(--olive);
 }
 
-.lime, .color-lime {
+.lime {
   color: var(--lime);
 }
 
-.yellow, .color-yellow {
+.yellow {
   color: var(--yellow);
 }
 
-.orange, .color-orange {
+.orange {
   color: var(--orange);
 }
 
-.red, .color-red {
+.red {
   color: var(--red);
 }
 
-.fuchsia, .color-fuchsia {
+.fuchsia {
   color: var(--fuchsia);
 }
 
-.purple, .color-purple {
+.purple {
   color: var(--purple);
 }
 
-.maroon, .color-maroon {
+.maroon {
   color: var(--maroon);
 }
 
@@ -4769,7 +4559,7 @@ hr {
   }
 }
 
-.color-link, .color-link\:hover:hover, .anchor:hover .color-link\:hover {
+.linkcolor, .linkcolor\:hover:hover, .anchor:hover .linkcolor\:hover {
   color: var(--link-color);
 }
 
