--- a/src/css/index.css
+++ b/src/css/index.css
@@ -39,8 +39,8 @@
   --theme-highlight-text-color:       inherit;
   --theme-highlight-background-color: var(--yellow);
 
-  --base-background-color:            var(--theme-background-color);
-  --base-color:                       var(--theme-text-color);
+  --default-background-color:         var(--theme-background-color);
+  --default-color:                    var(--theme-text-color);
   --link-color:                       var(--theme-link-color);
 
   --copy-space-primary:               1.5em;
